--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.7.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
