--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "antd": "^3.7.0",
+    "concurrently": "^3.6.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "mongoose": "^5.2.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -18,5 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:8888"
 }
