--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "antd": "^3.7.0",
+    "async": "^2.6.1",
+    "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "mongoose": "^5.2.4",
+    "mysql": "^2.16.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
