--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "async": "^2.6.1",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.6.0",
+    "echarts": "^4.1.0",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
